--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-This is the git html page and is being used to see the changes that i have made.
+This is the git html page and is being used to see the changes that i have made. This is updated version.
 </body>
 </html>
